# ToDo_terminal

./: .gitignore  .pylintrc  README.md  pyproject.toml  requirements.txt
.circleci/: config.yml
crudproj/: connection_db.py  gui_module.py  main.py
scripts/: check_commit.sh  line_checker.sh  run_pylint_analysis.sh
tests/: test_main.py
