[tool.poetry]
name = "crudProj"
version = "0.1.0"
description = "CRUD api in python"
authors = ["Shubh Srivastava"]
readme = "README.md"
keywords = ["CRUD", "Python", "Database"]

[tool.poetry.dependencies]
python = "^3.10"
mysql-connector-python = "^8.0"
protobuf = "^4.21.12"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
